# CG2018

./: CMakeLists.txt  custom_types.h  main.cpp
Ex1/: main.cpp
Ex2/: CMakeLists.txt  main.cpp
Ex3/: CMakeLists.txt  Camera.h  main.cpp
